Fix text area not showing right

--- a/src/theme.less
+++ b/src/theme.less
@@ -206,7 +206,8 @@ htl-hatool {
                     border-radius: 5px;
                     border-radius: 12px;
                     border: solid 1px #e4e4e4;
-                    background-color: #ffffff;   
+                    background-color: #ffffff;
+                    z-index: 2;
                 }
             }            
         }
